# travis-gop-research

./: Dockerfile  README.md  __init__.py  austin_finance.py  config.toml  fec_research.py  main.py  pyproject.toml  report.md  research_feb2025.py  tec_research.py
.op/plugins/: gh.json
data/: austin_cf.csv  fight_for_austin_expenses.csv  fight_for_austin_expenses_atx.csv  fight_for_austin_expenses_raw.csv  fight_for_tomorrow_expenses.csv  fight_for_tomorrow_expenses_raw.csv  keep_round_rock_safe_contributors.csv  keep_round_rock_safe_payroll.csv  mackowiak_entities_payments.csv  make_liberty_win_fec.csv  potomac_all_years.csv  potomac_pac_payments.csv  save_austin_now_expenses.csv  save_austin_now_expenses_atx.csv  save_austin_now_expenses_raw.csv  travis_cec_expenses.csv  travis_cec_expenses_raw.csv  travis_cec_payroll.csv  travis_gop_fec.csv  wab_pac_payments.csv  wab_pac_payments_raw.csv
